--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -12,6 +12,7 @@ body {
     background: #262626;
 }
 
+/*
 .container {
     margin-top: -50px;
     width: 100%;
@@ -21,22 +22,38 @@ body {
     align-items: center;
     gap: 2rem;
 }
+*/
+.container {
+display: grid;
+grid-template-rows: 80px auto 1fr auto 50px;
+grid-template-columns: 1fr 4fr 1fr;
+height: 100vh;
+grid-template-areas:
+"header         header          header"
+"left-aside     banner          right-aside"
+"left-aside     main            right-aside"
+"left-aside     low-content     rigth-aside"
+"foter          footer          footer";
+gap: 10px;
+padding: 10px;
+height: 600;
+font-size: 10px;
+
+/*align-items: center;*/
+}
 
 .outerBox {
-    /* background: yellow; */
-    width: 35rem;
-    height: 25rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center; /* horizontal */
+  align-items: center;     /* vertical */
+  height: 100%;            /* ocupar toda el área del grid */
 }
 
 .box {
-    position: relative;
-    width: 200px;
-    height: 300px;
-    transform-style: preserve-3d;
-    transform: perspective(1000px);
+  width: 200px;
+  height: 300px;
+  transform-style: preserve-3d;
+  position: relative; /* o quitá absolute */
 }
 
 .box span {
@@ -80,3 +97,19 @@ body {
         transform: perspective(1000px) rotateY(360deg);
     }
 }
+
+@media (max-width: 678px) {
+    .container {
+        grid-template-rows: 50px 50px 50px 1fr;
+        grid-template-columns: 1fr;
+        grid-template-areas:
+        "header"
+        "banner"
+        "lefe-aside"
+        "main"
+        "right-aside"
+        "low-content"
+        "footer";
+    }
+}
+    
